MODINREACH-336 fix code smells