@@ -31,9 +31,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import static java.util.Collections.emptyList;
 import static java.util.Collections.emptySet;
 import static org.apache.commons.collections4.ListUtils.emptyIfNull;
 import static org.folio.innreach.domain.service.impl.MARCRecordTransformationServiceImpl.isMARCRecord;
@@ -321,7 +319,7 @@ public class ContributionValidationServiceImpl implements ContributionValidation
       .stream()
       .flatMap(agency -> agency.getFolioLibraryIds().stream())
       .distinct()
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private List<LibraryMappingDTO> getLibraryMappings(UUID centralServerId) {
